--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,9 @@
 .fc-event {
   outline: none !important;
 }
+
+.heat-empty { fill:#ebedf0 }
+.heat-1    { fill:#c6e48b }
+.heat-2    { fill:#7bc96f }
+.heat-3    { fill:#239a3b }
+.heat-4    { fill:#196127 }
