--- a/src/index.css
+++ b/src/index.css
@@ -4,23 +4,23 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family:
+    -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family:
+    source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 .fc-event {
-  overflow: hidden;       /* はみ出しは隠す */
-  white-space: normal;    /* 改行は許可 */
-  text-overflow: clip;    /* 省略はしない */
-  display: -webkit-box;   /* 折り返しのためにFlexboxの一種を使う */
-  -webkit-line-clamp: 2;  /* 最大2行まで表示 */
+  overflow: hidden; /* はみ出しは隠す */
+  white-space: normal; /* 改行は許可 */
+  text-overflow: clip; /* 省略はしない */
+  display: -webkit-box; /* 折り返しのためにFlexboxの一種を使う */
+  -webkit-line-clamp: 2; /* 最大2行まで表示 */
   -webkit-box-orient: vertical;
 }
